# HAL-APPLICATION

./: README.md
src/hal_application/: CMakeLists.txt  package.xml
src/hal_application/forms/: MainWindow.ui
src/hal_application/include/hal_application/: CONFIG.h
src/hal_application/include/hal_application/handlers/: ManipulatorPresetHandler.h  NavigationPathHandler.h
src/hal_application/include/hal_application/nodes/: ApplicationNode.h  AutonomousNode.h  ChassisControlNode.h  ManipulatorControlNode.h
src/hal_application/include/hal_application/widgets/: AxisView.h  Diode.h  HorizontalJoystickWidget.h  JoystickWidget.h  JoystickWidgetM.h  MainWindow.h  MapView.h  VerticalJoystickWidget.h
src/hal_application/launch/: fullstack.launch.py
src/hal_application/predefined_paths/: path_one.csv
src/hal_application/scripts/: gamepad_interface.py
src/hal_application/src/: main.cpp
src/hal_application/src/nodes/: ApplicationNode.cpp  AutonomousNode.cpp  ChassisControlNode.cpp  ManipulatorControlNode.cpp
src/hal_application/src/widgets/: AxisView.cpp  Diode.cpp  HorizontalJoystickWidget.cpp  JoystickWidget.cpp  JoystickWidgetM.cpp  MainWindow.cpp  MapView.cpp  VerticalJoystickWidget.cpp
src/hal_communication/: CMakeLists.txt  package.xml
src/hal_communication/config/: comm.yaml
src/hal_communication/include/hal_communication/: comm_server.h
src/hal_communication/launch/: communication.launch.py
src/hal_communication/scripts/: labo_app.py  manipulator_interface.py  teleoperator.py  wheel_interface.py
src/hal_communication/src/: comm_server.cpp  main.cpp  wheel_mux.cpp
src/hal_interfaces/: CMakeLists.txt  package.xml
src/hal_interfaces/msg/: ArucoPose.msg  GamepadInterface.msg  GroundObjectPose.msg  Transmission.msg
src/hal_interfaces/srv/: ArucoPose.srv  Communication.srv  ForwardKinematics.srv  InverseKinematics.srv  PoseGNSS.srv
src/hal_manipulator/: CMakeLists.txt  package.xml
src/hal_manipulator/config/: dh_parameters.yaml
src/hal_manipulator/hal_manipulator/: forward_kinematics.py  inverse_kinematics.py
src/hal_manipulator/launch/: hal_kinematics.launch.py
src/hal_manipulator/scripts/: hal_kinematics.py
src/hal_manipulator/src/: main.cpp
